Fixed alignment of user role select

--- a/Erasmus/src/sass/style.scss
+++ b/Erasmus/src/sass/style.scss
@@ -599,7 +599,10 @@ a.btn i{
   font-size: 25px;
 }
 a.hazardBtn i{
-  margin: 4px 10px 2px 0px !important;
+  margin: 7px 3px 0px 3px !important;
+  &.icon-plus-2{
+    margin: 7px 8px 0px 8px !important;
+  }
 }
 .small a.hazardBtn i{
   margin: 7px 13px 2px 5px !important;
